
2009-06-03

   * [FIX] An empty filter will now return all documents
   * [FEATURE] Functionality added to print summary statistics regarding email written

2009-05-19

   * [FEATURE] Export a social network to a Graphviz-Dot file (right click on a 
     document in the primary document tree -> Print Social Network to Dot-File...)
   * [FEATURE] Support meta data in Visualization partitioning (e.g. meta:from) to partition by author

2009-03-20

   * [FIX] Prevent PrimaryDocumentTreeView to become too large because of Label showing filter.

2009-01-31

   * [FEATURE]  LaTeX Export now uses the title property of a definition to 
                set more readable titles in the glossary

2009-01-05

   * [FEATURE]  Added Debug Mode for extra output, and template reloading
   * [BUG]      LaTeX Export Whitespace fixes

2008-12-25

   * [FEATURE]  Export a Glossary to LaTeX

2008-12-19 

   * [FEATURE]  SVG Screenshot support for visualization
   * [FEATURE]  Statistics computation now possible on a per thread basis
   * [BUG]      Some fixes to partitioning codes in Visualization  

2008-11-17

   * [MINOR]    Improved search and highlighting

2008-11-12

   * [FEATURE]  Date based fetching from Gmane

2008-10-09

   * [MINOR]    Added indexing of message metadata in the Lucene search engine
   * [MINOR]    Tabulation View now supports flipping of x and y
   * [MINOR]    Changed highlight color to yellow from red, 
                and fixed multiline bug
   * [MINOR]    Improved HTML Display for Categories
   * [INTERNAL] StringJoiner now implements CharSequence

2008-09-08

   * [FEATURE]  Code Completion now shows definition of code
   * [MINOR]    Improved Tabulation View for columns and rows showing
                missing intersections

2008-08-27

   * [FEATURE]  Tabulation View now works as intended on properties
   * [MINOR]    Improved CodeCompleter to handle white space better
   * [MINOR]    Improved CodeAsTextView